--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col">
                     <h1><strong>Nate Wright</strong></h1>
-                    <h2>a.k.a. NateDogg</h2>
+                    <h2>a.k.a NateDogg</h2>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="row">
-            <h2 class="text-black mx-auto"><strong>About me</strong></h2>
+            <h2 class="text-black mx-auto"><strong>About me!</strong></h2>
             <div class="row row-content align-items-center no-gutters">
                 <div class="col-7 col-md-6 col-lg-4 mx-auto">
                     <div class="media mr-2">
@@ -189,7 +189,7 @@
         <div class="mx-auto">
             <p>"I got love"<audio class="mt-1" src="mp3s/i-got-love.mp3" controls loop></audio></p>
         </div>
-        <div class="container mx-auto">
+        <div class="container-fluid mx-auto">
             <div class="row row-content mx-auto">
                 <div class="col mx-auto">
                     <h2 class="text-white"><strong>Contact Info</strong></h2>
