--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1><strong>Nate Wright</strong></h1>
+                    <h1><strong>Nathan Wright</strong></h1>
                     <h2>a.k.a NateDogg</h2>
                 </div>
             </div>
